[gd_scene load_steps=35 format=2]

[ext_resource path="res://juego/Menus/MenuAjuste.gd" type="Script" id=1]
[ext_resource path="res://juego/sonidos/btn2.wav" type="AudioStream" id=2]
[ext_resource path="res://juego/Menus/SubirVolumen.gd" type="Script" id=3]
[ext_resource path="res://juego/recursosHud/Kenney Blocks.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://juego/Menus/ContenedorAccion.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=25]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=26]
size = 20
font_data = SubResource( 25 )

[sub_resource type="DynamicFont" id=27]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=20]
size = 18
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=22]
size = 17
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=24]
size = 18
font_data = SubResource( 23 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=10]
size = 19
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=12]
size = 19
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=14]
size = 19
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=16]
size = 19
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=18]
size = 19
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=28]
font_path = "res://juego/recursosHud/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=29]
size = 26
font_data = SubResource( 28 )

[node name="MenuAjuste" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
menu_inicial = "res://juego/Menus/MenuInicio.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -48.0
margin_right = 172.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 26 )
text = "MENU PRINCIPAL"

[node name="botonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="muscia" type="AudioStreamPlayer" parent="."]

[node name="ContenedorTabulador" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -72.0
custom_fonts/font = SubResource( 27 )
tab_align = 0

[node name="AudioVideo" type="Tabs" parent="ContenedorTabulador"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Titulo" type="Label" parent="ContenedorTabulador/AudioVideo"]
anchor_right = 1.0
margin_left = -2.0
margin_top = 15.0
margin_right = -2.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "AJUSTE "
align = 1
valign = 1

[node name="PanelPrincipal" type="Panel" parent="ContenedorTabulador/AudioVideo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -389.0
margin_top = -165.5
margin_right = 406.0
margin_bottom = 242.5

[node name="ContenedorPrincipal" type="VBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -178.5
margin_right = 397.5
margin_bottom = 178.5

[node name="Pantalla" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_right = 795.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "PANTALLA"
align = 1

[node name="HSeparator" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 34.0
margin_right = 795.0
margin_bottom = 38.0

[node name="Resolucion" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 42.0
margin_right = 795.0
margin_bottom = 75.0
alignment = 1

[node name="TextoResolucion" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_left = 171.0
margin_top = 2.0
margin_right = 466.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 20 )
text = "resolucion de pantalla "

[node name="OptionResolucion" type="OptionButton" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_left = 470.0
margin_right = 624.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 22 )
text = "1920 X 1080"

[node name="PantallaCompleta" type="CheckBox" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 79.0
margin_right = 795.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 24 )
text = "PANTALLA COMPLETA"
align = 1
icon_align = 1

[node name="HSeparator3" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 119.0
margin_right = 795.0
margin_bottom = 123.0

[node name="HSeparator2" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 127.0
margin_right = 795.0
margin_bottom = 131.0

[node name="Volumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 135.0
margin_right = 795.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 6 )
text = "VOLUMEN"
align = 1
valign = 1

[node name="HSeparator4" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 178.0
margin_right = 795.0
margin_bottom = 182.0

[node name="VolumenGeneral" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 186.0
margin_right = 795.0
margin_bottom = 215.0
custom_constants/separation = 11
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 299.0
margin_right = 397.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 8 )
text = "GENERAL"

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 408.0
margin_right = 428.0
margin_bottom = 29.0
text = "+"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 439.0
margin_right = 467.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 10 )
text = "10"

[node name="Bajarvolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 478.0
margin_right = 495.0
margin_bottom = 29.0
text = "-"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="VolumenMusica" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 219.0
margin_right = 795.0
margin_bottom = 248.0
custom_constants/separation = 10
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 303.0
margin_right = 397.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 12 )
text = "MUSICA "

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 407.0
margin_right = 427.0
margin_bottom = 29.0
text = "+"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 437.0
margin_right = 465.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 14 )
text = "10"

[node name="Bajarvolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 475.0
margin_right = 492.0
margin_bottom = 29.0
text = "-"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="VolumenSFX" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 252.0
margin_right = 795.0
margin_bottom = 281.0
custom_constants/separation = 10
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 326.0
margin_right = 373.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 16 )
text = "SFX "

[node name="SubirVolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 383.0
margin_right = 403.0
margin_bottom = 29.0
text = "+"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 413.0
margin_right = 441.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 18 )
text = "10"

[node name="Bajarvolumen" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 451.0
margin_right = 468.0
margin_bottom = 29.0
text = "-"
flat = true
script = ExtResource( 3 )
nodo_sfx = NodePath("../../../../../../botonSFX")

[node name="Inpust" type="Tabs" parent="ContenedorTabulador"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="ContenedorTabulador/Inpust"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 29 )
text = "CLIC EN EL BOTON PARA ASIGNAR TECLA"
align = 1

[node name="ContenedorRemapeo" type="VBoxContainer" parent="ContenedorTabulador/Inpust"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -78.0
margin_right = 127.5
margin_bottom = 78.0

[node name="ContenedorAccion" parent="ContenedorTabulador/Inpust/ContenedorRemapeo" instance=ExtResource( 5 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion/OptionResolucion" to="." method="_on_OptionResolucion_item_selected"]
[connection signal="toggled" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/PantallaCompleta" to="." method="_on_PantallaCompleta_toggled"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/SubirVolumen" to="." method="_on_SubirVolumen_general_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/Bajarvolumen" to="." method="_on_Bajarvolumen_general_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/SubirVolumen" to="." method="_on_SubirVolumen_musica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/Bajarvolumen" to="." method="_on_Bajarvolumen_musica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/SubirVolumen" to="." method="_on_SubirVolumen_sfx_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/Bajarvolumen" to="." method="_on_Bajarvolumen_sfx_pressed"]
